--- a/Connect4.cabal
+++ b/Connect4.cabal
@@ -25,28 +25,32 @@ source-repository head
 
 library
   exposed-modules:
+      CLI.ConnectCLI
       Game.Connect4
       Game.Utils
-      Lib
+      GUI.ConnectGUI
   other-modules:
       Paths_Connect4
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      ansi-terminal
+    , base >=4.7 && <5
+    , gloss
   default-language: Haskell2010
 
 executable Connect4-exe
   main-is: Main.hs
   other-modules:
-      ConnectCLI
       Paths_Connect4
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Connect4
+    , ansi-terminal
     , base >=4.7 && <5
+    , gloss
   default-language: Haskell2010
 
 test-suite Connect4-test
@@ -59,5 +63,7 @@ test-suite Connect4-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Connect4
+    , ansi-terminal
     , base >=4.7 && <5
+    , gloss
   default-language: Haskell2010
