--- a/HasKonnect4.cabal
+++ b/HasKonnect4.cabal
@@ -4,11 +4,11 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           Connect4
+name:           HasKonnect4
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/NeoVier/Connect4#readme>
-homepage:       https://github.com/NeoVier/Connect4#readme
-bug-reports:    https://github.com/NeoVier/Connect4/issues
+description:    Please see the README on GitHub at <https://github.com/NeoVier/HasKonnect4#readme>
+homepage:       https://github.com/NeoVier/HasKonnect4#readme
+bug-reports:    https://github.com/NeoVier/HasKonnect4/issues
 author:         Henrique Buss
 maintainer:     henrique.buss@hotmail.com
 copyright:      2020 Henrique Buss
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/NeoVier/Connect4
+  location: https://github.com/NeoVier/HasKonnect4
 
 library
   exposed-modules:
@@ -31,7 +31,7 @@ library
       GUI.ConnectGUI
       GUI.Rendering
   other-modules:
-      Paths_Connect4
+      Paths_HasKonnect4
   hs-source-dirs:
       src
   build-depends:
@@ -40,30 +40,30 @@ library
     , gloss
   default-language: Haskell2010
 
-executable Connect4-exe
+executable HasKonnect4-exe
   main-is: Main.hs
   other-modules:
-      Paths_Connect4
+      Paths_HasKonnect4
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      Connect4
+      HasKonnect4
     , ansi-terminal
     , base >=4.7 && <5
     , gloss
   default-language: Haskell2010
 
-test-suite Connect4-test
+test-suite HasKonnect4-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_Connect4
+      Paths_HasKonnect4
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      Connect4
+      HasKonnect4
     , ansi-terminal
     , base >=4.7 && <5
     , gloss
