--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                Connect4
+name:                HasKonnect4
 version:             0.1.0.0
-github:              "NeoVier/Connect4"
+github:              "NeoVier/HasKonnect4"
 license:             BSD3
 author:              "Henrique Buss"
 maintainer:          "henrique.buss@hotmail.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/NeoVier/Connect4#readme>
+description:         Please see the README on GitHub at <https://github.com/NeoVier/HasKonnect4#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -28,7 +28,7 @@ library:
   source-dirs: src
 
 executables:
-  Connect4-exe:
+  HasKonnect4-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -36,10 +36,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - Connect4
+    - HasKonnect4
 
 tests:
-  Connect4-test:
+  HasKonnect4-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -47,4 +47,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - Connect4
+    - HasKonnect4
